# ChatMyDocs

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/commands/: spec-check.md
.github/workflows/: cleanup.yml
backend/: main.py
backend/agents/: answer_agent.py  retrieval_agent.py  rewrite_agent.py
backend/api/: auth.py  chat.py  deps.py  documents.py  health.py  models.py
backend/graph/: __init__.py  chat_graph.py
backend/ingestion/: chunker.py  errors.py  ingest_service.py  parser.py
backend/llm/: __init__.py  catalog.py  factory.py  gateway.py  reranker.py  runconfig.py
backend/middleware/: jwt_auth.py  rate_limit.py
backend/pipeline/: chat_pipeline.py
backend/prompts/: answerer_identity.md  citation_rules.md  guardrails.md  no_docs.md  rewriter.md
backend/scripts/: cleanup_expired.py  create_collection.py  eval_questions.json  eval_retrieval.py
backend/services/: embed_signature.py  history.py  users.py
backend/tests/: conftest.py  test_cleanup_expired.py  test_config.py  test_guardrails.py  test_health.py  test_llm_router.py  test_prompt_assembly.py  test_rate_limit.py  test_security.py  test_session.py  test_sse.py
backend/utils/: config.py  embeddings.py  guardrails.py  llm_router.py  prompt_assembly.py  qdrant_client.py  redis_client.py  rrf.py  security.py  sse.py
docs/: ARCHITECTURE.md  BUILD-PROMPTS.md  CASE-STUDY.md  DESIGN-SYSTEM.md  DEV-SETUP.md  LOOM-SCRIPT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: smoke.sh
(+69 files in other folders)
